# etos

./: .dockerignore  .gitignore  .golangci.yml  .readthedocs.yaml  AGENTS.md  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CODEOWNERS  CONTROLLERS.md  Dockerfile  Dockerfile.provider  Makefile  PROJECT  README.md  README.rst  catalog-info.yaml  defaults.go  etos.yaml  go.mod  go.sum  mkdocs.yml  skaffold.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: add-manifest-to-release.yml  build-publish.yml  generate-manifest.yml  lint.yml  rebase-automatic-prs.yml  test-e2e.yml  test.yml  tox.yml  update-default-versions.yml  update-release.yml  validate-suite-schema.yml
api/v1alpha1/: cluster_types.go  common_types.go  environment_types.go  environmentrequest_conversion.go  environmentrequest_types.go  environmentrequest_webhook.go  environmentrequest_webhook_test.go  groupversion_info.go  provider_conversion.go  provider_types.go  provider_webhook.go  provider_webhook_test.go  testrun_conversion.go  testrun_types.go  testrun_webhook.go  testrun_webhook_test.go  webhook_suite_test.go  zz_generated.deepcopy.go
api/v1alpha2/: executionspace_types.go  groupversion_info.go  iut_types.go  logarea_types.go  zz_generated.deepcopy.go
backstage/: mkdocs.yml
backstage/docs/: index.md
charts/etos/: Chart.yaml  values.yaml
cleaning-crew/base/: cronjob.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service-account.yaml
cli/: .coveragerc  README.rst  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
cli/docs/: Makefile  conf.py  index.rst  requirements.txt
cli/src/etos_client/: __init__.py  __main__.py  client.py  command.py  start.py  test.py
cli/src/etos_client/announcer/: __init__.py  announcer.py
cli/src/etos_client/downloader/: __init__.py  downloader.py
cli/src/etos_client/etos/: __init__.py  etos.py  schema.py
cli/src/etos_client/etos/v0/: __init__.py  command.py  etos.py
cli/src/etos_client/etos/v0/event_repository/: __init__.py  graphql.py
cli/src/etos_client/etos/v0/events/: collector.py  events.py
cli/src/etos_client/etos/v0/schema/: __init__.py  request.py  response.py
cli/src/etos_client/etos/v0/subcommands/: __init__.py  start.py
cli/src/etos_client/etos/v0/test_results/: __init__.py  test_results.py
cli/src/etos_client/etos/v0/test_run/: __init__.py  test_run.py
cli/src/etos_client/etos/v1alpha/: __init__.py  command.py  etos.py
cli/src/etos_client/etos/v1alpha/schema/: request.py  response.py
cli/src/etos_client/etos/v1alpha/subcommands/: __init__.py  start.py
cli/src/etos_client/etos/v1alpha/test_run/: test_run.py
cli/src/etos_client/event_repository/: graphql.py  graphql_queries.py
cli/src/etos_client/events/: __init__.py  collector.py  events.py
cli/src/etos_client/lib/: __init__.py  graphql.py  graphql_queries.py  log_handler.py  test_result_handler.py
cli/src/etos_client/logs/: __init__.py  logs.py
cli/src/etos_client/shared/: __init__.py  baggage.py  downloader.py  events.py  utilities.py  validators.py
cli/src/etos_client/sse/: __init__.py  client.py  protocol.py
cli/src/etos_client/sse/v1/: __init__.py  client.py  protocol.py
cli/src/etos_client/sse/v2alpha/: __init__.py  client.py
cli/src/etos_client/test_results/: __init__.py  test_results.py
cli/src/etos_client/test_run/: __init__.py  test_run.py
cli/src/etos_client/types/: result.py  stream.py
cli/src/etos_debug/: __init__.py  command.py
cli/src/etosctl/: __init__.py  __main__.py  options.py
cli/src/etosctl/command/: __init__.py  command.py
cli/src/etosctl/engine/: __init__.py  engine.py
cli/src/etosctl/models/: __init__.py  models.py
cli/src/etosctl/options/: __init__.py  options.py
cli/src/etosctl/plugin/: __init__.py  plugin.py
cli/tests/: __init__.py  conftest.py  test_error_handling.py  test_v1alpha_request_schema.py
cluster/testing/: etos.yaml  kustomization.yaml
cmd/: main.go
cmd/environmentprovider/: main.go
cmd/executionspaceprovider/: main.go
cmd/iutprovider/: main.go
cmd/logareaprovider/: main.go
components/autoscaling/: kustomization.yaml
components/base/: kustomization.yaml
components/cleaning-crew/: configmap.yaml  cronjob.yaml  kustomization.yaml
components/encryption/: kustomization.yaml
components/filebeat/: suite-runner-template.yaml
components/filebeat-opentelemetry/: kustomization.yaml  suite-runner-template.yaml
components/firmware-flasher/: kustomization.yaml
components/observability/: kustomization.yaml
components/oldbase/: ingress.yaml  kustomization.yaml
components/olddefaults/: kustomization.yaml
components/oldencryption/: kustomization.yaml
components/oldfilebeat/: kustomization.yaml
components/providers/: kustomization.yaml
components/rabbitmq/: kustomization.yaml
components/rabbitmq-executionspace/: kustomization.yaml
config/rbac/: role.yaml  (+29 more)
defaults/: api.yaml  environment_provider.yaml  event_repository_api.yaml  event_repository_storage.yaml  execution_space_provider.yaml  iut_provider.yaml  log_area.yaml  log_area_provider.yaml  log_listener.yaml  sse.yaml  suite_runner.yaml  suite_starter.yaml  test_runner.yaml
docs/: core_concept.md  index.md
hack/: boilerplate.go.txt
local/: executor.py  main.py
scripts/: generate_new_secrets.py  rebase_labels.py  split_installer.py
source/: coderules.rst  conf.py  database.rst  index.rst  local.rst  release_process.rst  requirements.txt  sse.rst  versioning.rst
testdata/: goer.yaml  injector.yaml
(+509 files in other folders)
