[build-system]
requires = ["setuptools>=72", "wheel", "setuptools_scm[toml]>=8"]

[project]
name = "etos_client"
dynamic = ["version"]
description = "Test suite execution client for ETOS."
readme = "README.rst"
authors = [{name = "Tobias Persson", email = "tobias.persson@axis.com"}]
license = { text  = "Apache License, Version 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "etos_lib==4.0.0",
    "docopt~=0.6",
    "pydantic~=2.6",
    "jmespath~=1.0"
]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[project.urls]
Documentation = "https://etos.readthedocs.io/"
Homepage = "https://github.com/eiffel-community/etos"
Repository = "https://github.com/eiffel-community/etos"

[options]
zip_safe = false
include_package_data = true
python_requires = ">=3.4"

[options.packages.find]
where = "src"
exclude = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
etos_client =  "etos_client.__main__:run"
etosctl = "etosctl.__main__:run"

[test]
extras = true

[tool.pytest.ini_options]
addopts = "--cov etos_cleint --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[aliases]
dists = "bdist_wheel"

[bdist_wheel]
universal = 1

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = 1
formats = "bdist_wheel"

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.setuptools_scm]
version_scheme = "setup:version_scheme"
local_scheme = "setup:local_scheme"
root = ".."