[build-system]
requires = ["setuptools>=72", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "etos_client"
dynamic = ["version"]
description = "Test suite execution client for ETOS."
readme = "README.rst"
authors = [{name = "Tobias Persson", email = "tobias.persson@axis.com"}]
license = { text  = "Apache License, Version 2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "etos_lib==5.1.4",
    "docopt~=0.6",
    "pydantic~=2.6",
]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[project.scripts]
etos_client =  "etos_client.__main__:run"
etosctl = "etosctl.__main__:run"

[project.urls]
Documentation = "https://etos.readthedocs.io/"
Homepage = "https://github.com/eiffel-community/etos"
Repository = "https://github.com/eiffel-community/etos"

[tool.black]
line-length = 100

[tool.build]
# Use this option if your package is pure-python
universal = true

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = 1
formats = "bdist_wheel"

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pytest.ini_options]
addopts = "--cov etos_cleint --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.setuptools.packages]
find = { where = ["src"], exclude = ["tests"] }

[tool.setuptools_scm]
root = ".."
